2003-03-25  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fun.c (bk_fun_{entry,exit}): Hooks to bk profiling

	* lib/b_stats.c (bk_stat_*add): Allow API to accumulation function
	(for bk profiling which has recursive calls to functions)

	* lib/b_general.c (bk_general_funstat_init): Initialization
	routine for bk profiling

2003-03-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_url.c (bk_url_parse): distinguish scheme:/// from scheme:/
	(bk_url_reconstruct): better handling for non-generic URLs

	* include/libbk.h (BK_RUN_HANDLE_TIME): flag for handlers to get time
	add flags to bk_run_{poll,idle,on_demand}_add

	* lib/b_run.c (bk_run_once): only select, gettimeofday if absolutely
	needed [requires BK_RUN_HANDLE_TIME for non-eventq handlers; not one of
	which actually used the timestamp passed in]
	(bk_run_checkeventq): gettimeofday if needed, return to bk_run_once

2003-03-24  Seth Robertson  <seth@hawking.sysdetect.com>

	* lib/b_stats.c: New support routines to track timing of whatever
	you like

2003-03-21  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_url.c (bk_url_reconstruct): James' idea of a "valid" URL 
	isn't quite the same as that of pcap or mailto.
	
2003-03-20  Seth Robertson  <seth@startide.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_data): Restore AWB default of
	missing text being empty string, not null.

2003-03-19  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_error.c (bk_error_irepeater_flush): Make sure error
	aggregation messages get added to the error queues.

	* test/test_errorstuff.c (progrun): Call bk_error_repeater_flush
	before bk_error_dump (here and other test programs).

2003-03-19  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fileutils.c (bk_slurp): Enable slurped files to be null
	terminated if you will be treating them like strings.

2003-03-18  Seth Robertson  <seth@startide.sysdetect.com>

	* xml/b_search.c: libbkxml for non-awb-specific XML routines