@@ -1,3 +1,9 @@
+2003-03-29  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_run.c (bk_run_checkeventq): gettimeofday at most twice
+
+	* lib/b_config.c: document, more compatible with java.util.Properties
+
 2003-03-25  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_fun.c (bk_fun_{entry,exit}): Hooks to bk profiling
